cotobang/src/main/java/com/example/cotobang/errors/NotAuthorityException.java
package com.example.cotobang.errors;

public class NotAuthorityException extends RuntimeException {
    public NotAuthorityException(String name) {
        super("Not Authority : " + name);
    }
}
